# intake

./: .ci-coveragerc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Demo.ipynb  MANIFEST.in  README.md  README.rst  README_refactor.md  appveyor.yml  catalog.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  versioneer.py
.github/workflows/: main.yaml  pre-commit.yml  pypipublish.yaml
conda/: meta.yaml
docs/: Makefile  README.md  environment.yml  make.bat  make_api.py  plugins.py  plugins.yaml  requirements.txt
docs/source/: api.rst  api2.rst  api_base.rst  api_other.rst  api_user.rst  auth-plugins.rst  catalog.rst  changelog.rst  code-of-conduct.rst  community.rst  conf.py  contributing.rst  data-packages.rst  deployments.rst  examples.rst  glossary.rst  gui.rst  guide.rst  index.rst  index2.rst  index_v1.rst  making-plugins.rst  overview.rst  persisting.rst  plotting.ipynb  plotting.rst  plugin-directory.rst  quickstart.rst  reference.rst  roadmap.rst  scope2.rst  server.rst  start.rst  tools.rst  tour2.rst  transforms.rst  use_cases.rst  user2.rst  walkthrough2.rst
examples/: GUI.ipynb  README.md  Take2.ipynb  cache_demo.yml  caching_demo.ipynb  environment.yml
examples/airline_flights/: airline.yaml  build.sh  meta.yaml
examples/data-us-states/: build.sh  meta.yaml  us_states.yaml
examples/nyc_taxi/: build.sh  meta.yaml  nyc_taxi.yaml
examples/precip/: Model_precip_data.ipynb  (+1 more)
intake/: .coveragerc  __init__.py  _version.py  compat.py  config.py  conftest.py  dask.py  util_tests.py  utils.py
sample/: us_states.yaml
scripts/: deps.py
templates/: README.md
(+340 files in other folders)
