[tool.black]
line-length = 100

[tool.ruff]
line-length = 130
ignore = ["E402"]  # top of file imports

[tool.ruff.per-file-ignores]
"*/tests/*" = ["E722"]  # bare `except`
"intake/util_tests.py" = ["E722"]  # bare `except`
"__init__.py" = ["F401"]  # imported but unused

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "intake"
dynamic = ["version"]
description = "Data catalog, search and load"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Martin Durant", email = "martin.durant@alumni.utoronto.ca"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
]
dependencies = [
  "fsspec >=2023.0.0",
  "pyyaml",
  "platformdirs",
  "networkx"
]

[tool.setuptools_scm]
version_file = "intake/_version.py"

[tool.setuptools]
include-package-data = false
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["*tests*", "dist", "*examples*", "*scripts*", "*docs*"]
namespaces = false

[flake8]
exclude = "__init__.py"
ignore = "E,W"
select = "F,E101,E111,E501"
max-line-length = 100

[project.entry-points."intake.drivers"]
csv = "intake.source.csv:CSVSource"
jsonfiles = "intake.source.jsonfiles:JSONFileSource"
numpy = "intake.source.npy:NPySource"
tiled_cat = "intake.source.tiled:TiledCatalog"
textfiles = "intake.source.textfiles:TextFilesSource"
ndzarr = "intake.source.zarr:ZarrArraySource"
